Fixed BMI error Adjusted several things so that when a chart value is selected in DataVisualization activity, it is led to a filtered patient list with the condition selected