@@ -1,16 +1,14 @@
 package seebee.geebeeview.model.monitoring;
 
-import android.util.Log;
-
 import java.util.ArrayList;
-
-import seebee.geebeeview.model.consultation.Patient;
 
 /**
  * Created by Joy on 6/27/2017.
  */
 
 public class ValueCounter {
+    private final String TAG = "Value Counter";
+
     private String[] lblVisualAcuity = {"20/200", "20/100", "20/70", "20/50", "20/40", "20/30", "20/25", "20/20",
             "20/15", "20/10", "20/5"};
     private int[] valVisualAcuityLeft = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
@@ -29,8 +27,8 @@ public class ValueCounter {
     private String[] lblFineMotorHold = {"Hold", "Not Hold"};
     private int[] valFineMotorHold = {0, 0};
 
-    private String[] lblBMI = {"Underweight", "Normal", "Overweight", "Obese"};
-    private int[] valBMI = {0, 0, 0, 0};
+    private String[] lblBMI = {"Underweight", "Normal", "Overweight", "Obese", "N/A"};
+    private int[] valBMI = {0, 0, 0, 0, 0};
 
     private ArrayList<PatientRecord> patientRecords;
 
@@ -231,7 +229,7 @@ public class ValueCounter {
         return valBMI;
     }
 
-    public void setValBMI() {
+    private void setValBMI() {
         String result;
         for(int i = 0; i < patientRecords.size(); i++) {
             result = calculateBMI(patientRecords.get(i));
@@ -244,20 +242,75 @@ public class ValueCounter {
                     break;
                 case "Obese": valBMI[3]++;
                     break;
+                case "N/A": valBMI[4]++;
             }
+            //Log.v(TAG, "Patient No: "+i+" Result: "+result);
         }
     }
 
     private String calculateBMI(PatientRecord patientRecord) {
         int height, weight;
-        height = new Double(patientRecord.getRecord().getHeight()).intValue();
-        weight = new Double(patientRecord.getRecord().getWeight()).intValue();
+        height = Double.valueOf(patientRecord.getRecord().getHeight()).intValue();
+        weight =Double.valueOf(patientRecord.getRecord().getWeight()).intValue();
         float bmi = BMICalculator.computeBMIMetric(height, weight);
-        String result = BMICalculator.getBMIResultString(patientRecord.getGender(), patientRecord.getAge(), bmi);
-        return result;
+        return BMICalculator.getBMIResultString(patientRecord.getGender(), patientRecord.getAge(), bmi);
     }
 
     public String[] getLblBMI() {
         return lblBMI;
+    }
+
+    public static String convertRecordColumn(String column) {
+        String recordColumn = "";
+        switch (column){
+            case "Visual Acuity Right":
+                recordColumn = Record.C_VISUAL_ACUITY_RIGHT;
+                break;
+            case "Visual Acuity Left":
+                recordColumn = Record.C_VISUAL_ACUITY_LEFT;
+                break;
+            case "Color Vision":
+                recordColumn = Record.C_COLOR_VISION;
+                break;
+            case "Hearing Left":
+                recordColumn = Record.C_HEARING_LEFT;
+                break;
+            case "Hearing Right":
+                recordColumn = Record.C_HEARING_RIGHT;
+                break;
+            case "Gross Motor":
+                recordColumn = Record.C_GROSS_MOTOR;
+                break;
+            case "Fine Motor (Dominant Hand)":
+                recordColumn = Record.C_FINE_MOTOR_DOMINANT;
+                break;
+            case "Fine Motor (Non-Dominant Hand)":
+                recordColumn = Record.C_FINE_MOTOR_N_DOMINANT;
+                break;
+            case "Fine Motor (Hold)":
+                recordColumn = Record.C_FINE_MOTOR_HOLD;
+                break;
+        }
+        return recordColumn;
+    }
+
+    public static int ConvertMotor(String v) {
+        int result = 2;
+        if(v.contentEquals("Pass")) {
+            result = 0;
+        } else if(v.contentEquals("Fail")) {
+            result = 1;
+        }
+        return result;
+    }
+
+    public static int ConvertHold(String v) {
+        int result = 2;
+        if(v.contentEquals("Hold")) {
+            result = 0;
+        } else if(v.contentEquals("Not Hold")) {
+            result = 1;
+        }
+        return result;
     }
 }
